# slot_twap_oracle

./: Cargo.toml  README.md  package-lock.json  package.json  skills-lock.json
.agents/skills/safe-solana-builder/: SKILL.md
.agents/skills/safe-solana-builder/references/: shared-base.md
api/: package-lock.json  package.json  tsconfig.json
api/__tests__/: api.test.ts  security.test.ts  ws.test.ts
api/src/: app.ts  client.ts  config.ts  index.ts  middleware.ts  validate.ts  ws.ts
api/src/routes/: history.ts
bots/updater/: .env.example  package.json  tsconfig.json
bots/updater/src/: index.ts  metrics.ts  oracleClient.ts  prometheus.ts  raydium.ts  sender.ts
bots/updater/src/sources/: meteora.ts  orca.ts  pool-utils.ts  raydium.ts
docs/: architecture.md  benchmark.md  blog.md  devnet-test-plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compute_swap.rs  cumulative_accumulation.rs  deviation_check.rs  ring_buffer.rs
programs/slot_twap_oracle/: Cargo.toml
programs/slot_twap_oracle/src/: events.rs  lib.rs
programs/slot_twap_oracle/src/errors/: mod.rs
programs/slot_twap_oracle/src/instructions/: claim_reward.rs  fund_reward_vault.rs  get_swap.rs  initialize_oracle.rs  mod.rs  (+6 more)
scripts/: benchmark.ts  calculate-rewards.ts  deploy-devnet.ts  devnet-e2e.sh  e2e-test.ts  test-pool-parsing.ts  validate-pool-offsets.ts
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk-tests/: oracle.test.ts
sdk/src/: cli.ts  client.ts  idl.json  idl.ts  index.ts  pda.ts  types.ts
tests/: Cargo.toml  slot_twap_oracle.ts
tests/src/: lib.rs
(+4 files in other folders)
